[package]
name = "fe_engage_save_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin"
path = "examples/forging_materials.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crc32fast = "1.3.2"
encoding_rs = "0.8.32"